Offline validate can't enforce fast count consistency

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Engines, Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • WhatThePelly - 2025-09-02
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We don't apply oplog entries in the repair context, so fast counts won't match.

      Empirically atlas folks are seeing this in their prototypes.

      This isn't a coverage loss compared with command-based validate since that doesn't supply `enforceFastCount=true`

            Assignee:
            Nic Hollingum
            Reporter:
            Nic Hollingum
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: