SERVER-109464: Don't enforce fast count for binary validate (#40233)

GitOrigin-RevId: 7476d3cf1c76d5fdf08cff61fbb67298b0952285